src/test/ui/unboxed-closures/unboxed-closures-recursive-fn-using-fn-mut.nll.stderr
error[E0499]: cannot borrow `*self` as mutable more than once at a time
  --> $DIR/unboxed-closures-recursive-fn-using-fn-mut.rs:32:21
   |
LL |         (self.func)(self, arg)
   |         ------------^^^^------
   |         |           |
   |         |           second mutable borrow occurs here
   |         first mutable borrow occurs here
   |         borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0499`.
